# dsinfer

./: .gitmodules  CMakeLists.txt  README.md
docs/: ds-spec-2.2.md  ds-spec-2.3.md  ds-synth-spec.md  ds-synth.md  dsinfer-level-1-draft.md  first-phase-task-format.md  test-spec2.md
libs/: .gitignore  CMakeLists.txt
scripts/: setup-onnxruntime.cmake
scripts/vcpkg-manifest/: vcpkg.json
src/: CMakeLists.txt  dsinferConfig.cmake.in
src/apps/cli/: CMakeLists.txt  loadconfig.cpp  loadconfig.h  main.cpp  startupconfig.cpp  startupconfig.h  statusconfig.cpp  statusconfig.h  utils.cpp  utils.h
src/cli/: CMakeLists.txt  main.cpp
src/dsinfer/: CMakeLists.txt  dsinfer_capi.cpp  dsinfer_capi.h  dsinfer_common.h  dsinfer_cxxapi.h  dsinfer_global.h
src/dsinfer/core/: common.h  environment.cpp  environment.h  inference.h  ort_library.cpp  ort_library.h  session.cpp  session.h  session_p.h  sessionmanager.cpp  sessionmanager.h  sharedsession.cpp  sharedsession.h  status.cpp  string_type.h
src/dsinfer/inference/: inference.h
src/dsinfer/internal/: modelconfig.cpp  modelconfig_p.h  simplevarexp.cpp  simplevarexp_p.h
src/dsinfer/json/: json11.cpp  json11.hpp
src/libs/: .gitignore  CMakeLists.txt
src/libs/core/: CMakeLists.txt  common.h  dsinfer_common.h  dsinfer_pimpl.h  dsinfercoreglobal.h  dsinferglobal.h
src/libs/core/capi/: dsinfer.h
src/libs/core/contributes/: contributeregistry.cpp  contributeregistry.h  contributeregistry_p.h  contributespec.cpp  contributespec.h  contributespec_p.h  inferenceregistry.cpp  inferenceregistry.h  inferencespec.cpp  inferencespec.h  inferencespec_p.h  singerregistry.cpp  singerregistry.h  singerspec.cpp  singerspec.h  singerspec_p.h
src/libs/core/extension/: iinterpreter.cpp  iinterpreter.h  iinterpreter_p.h  interpreterloader.cpp  interpreterloader.h
src/libs/core/generic/: displaytext.cpp  displaytext.h  error.h  jsonvalue.cpp  jsonvalue.h  plugin.cpp  plugin.h  pluginfactory.cpp  pluginfactory.h  pluginfactory_p.h  sharedlibrary.cpp  sharedlibrary.h  versionnumber.cpp  versionnumber.h
src/libs/core/inference/: iinterpreter.cpp  iinterpreter.h  inference.cpp  inference.h  inference_p.h  inferencecontext.cpp  inferencecontext.h  inferencedriver.cpp  inferencedriver.h  inferencedriverplugin.cpp  inferencedriverplugin.h  inferenceinterpreter.cpp  inferenceinterpreter.h  inferenceinterpreterplugin.cpp  inferenceinterpreterplugin.h  inferencesession.cpp  inferencesession.h  inferencetask.cpp  inferencetask.h  interpreterloader.cpp  interpreterloader_p.h
src/libs/core/kernel/: environment.cpp  environment.h  environment_p.h  inference.h  libraryspec.cpp  libraryspec.h  libraryspec_p.h  session.cpp  session.h  sessionbridge.h
src/libs/core/manifests/: inferencemanifest.cpp  librarymanifestbase.h  libraryspec.h  singermanifest.h
src/libs/core/serialization/: inferenceinfo.h  json.cpp  json_capi.h  json_cxxapi.h  jsonapi.cpp  jsonapi.h  jsonapi_capi.h  libraryinfo.cpp  libraryinfo.h
src/libs/core/text/: format.cpp  format.h
src/libs/core/utils/: algorithms.h  format.cpp  format.h  log.cpp  log.h
src/libs/dsutils/: CMakeLists.txt  dsutilsglobal.h
src/libs/dsutils/tools/: phonemedictionary.cpp  phonemedictionary.h  singerconfiguration.cpp  singerconfiguration.h
src/libs/loader/: CMakeLists.txt  dsinferloaderglobal.h
src/plugins/: CMakeLists.txt
src/plugins/acoustic/: CMakeLists.txt  acousticinference.cpp  acousticinference.h  acousticinterpreter.cpp  acousticinterpreter.h
src/plugins/inferencedrivers/: CMakeLists.txt
src/plugins/inferencedrivers/onnxdriver/: CMakeLists.txt  main.cpp  onnxcontext.cpp  onnxcontext.h  onnxcontext_p.h  onnxdriver.cpp  onnxdriver.h  onnxdriverplugin.cpp  onnxdriverplugin.h  onnxsession.cpp  onnxsession.h  onnxsession_p.h  onnxtask.cpp  onnxtask.h  taskStart.json5
src/plugins/inferencedrivers/onnxdriver/internal/: env.cpp  env.h  executionprovider.cpp  executionprovider.h  executionprovider_p.h  idutil.h  logger.h  onnxdriver_common.h  onnxdriver_logger.h  scopedtimer.h  session.cpp  session.h  session_p.h  sessionimage.cpp  sessionimage.h  sessionsystem.cpp  sessionsystem.h  tensormap.h  tensorparser.h  valuemap.h  valueparser.h
src/plugins/inferenceinterpreters/: CMakeLists.txt
src/plugins/inferenceinterpreters/acoustic/: CMakeLists.txt  acousticinference.cpp  acousticinference.h  acousticinterpreter.cpp  acousticinterpreter.h  main.cpp
src/plugins/inferenceinterpreters/acoustic/internal/: acoustic_logger.h  array_util.h  json_serializer.cpp  json_serializer.h  json_utils.h  preprocess.cpp  preprocess.h  project.h  sample_curve.cpp  sample_curve.h  speaker_embed.cpp  speaker_embed.h
src/plugins/inferenceinterpreters/pitch/: CMakeLists.txt  pitchinference.cpp  pitchinference.h  pitchinterpreter.cpp  pitchinterpreter.h
src/plugins/pitch/: CMakeLists.txt  pitchinference.cpp  pitchinference.h  pitchinterpreter.cpp  pitchinterpreter.h
src/tests/: CMakeLists.txt
src/tests/tst_onnxdriver/: CMakeLists.txt  context.cpp  context.h  main.cpp  onnxtest.cpp  onnxtest.h  testinferdata.cpp  testinferdata.h  valueutils.cpp  valueutils.h
src/tests/tst_onnxdriver/test_data/input_data/: input-two_float_vectors-1.json
src/tests/tst_onnxdriver/test_data/onnx_models/: vector_add-same_filesize.onnx  vector_add.onnx  vector_rss_sigmoid.onnx
src/tests/txtdict/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  simplevarexp.cpp  simplevarexp.h
